# gopro_renamer

./: .gitignore  .travis.yml  LICENSE  README.md  gopro_chapter_renamer.py  setup.cfg  setup.py
.github/workflows/: python-app.yml
src/gopro_renamer/: rename.py  renamer.py
tests/: test_renamer.py
