[metadata]
name = gopro-renamer
version = 0.4.0
author = Kevin Ha
description = Rename chaptered video files created by GoPro cameras
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kcha/gopro_renamer
project_urls =
    Bug Tracker = https://github.com/kcha/gopro_renamer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
tests_require = pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gopro-renamer = gopro_renamer.renamer:main
